--- a/gmall-manager-service/src/main/resources/application.properties
+++ b/gmall-manager-service/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.dubbo.registry.protocol=zookeeper
 spring.dubbo.registry.address=192.168.72.128:2181
 spring.dubbo.base-package=com.atguigu.gmall
 spring.dubbo.protocol.name=dubbo
+
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+mybatis.configuration.mapUnderscoreToCamelCase=true
